dev3/templates/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: indefinite-studies-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: localhost # 'demo.localdev.me' or 'localhost' or 'localtest.me', all of them are 127.0.0.1
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: indefinite-studies-web-ui
            port:
              number: 3000
      - path: /api/v[1-9]/auth 
        pathType: Prefix
        backend:
          service:
            name: indefinite-studies-auth-service
            port:
              number: 3005
      - path: /api/v[1-9]/users 
        pathType: Prefix
        backend:
          service:
            name: indefinite-studies-profiles-service
            port:
              number: 3005
      - path: /api/v[1-9]/posts 
        pathType: Prefix
        backend:
          service:
            name: indefinite-studies-posts-service
            port:
              number: 3005
      - path: /api/v[1-9]/feed 
        pathType: Prefix
        backend:
          service:
            name: indefinite-studies-feed-builder-service
            port:
              number: 3005
      - path: /api/v[1-9]/notifications 
        pathType: Prefix
        backend:
          service:
            name: indefinite-studies-notifications-service
            port:
              number: 3005
      - path: /api/v[1-9]/subscriptions 
        pathType: Prefix
        backend:
          service:
            name: indefinite-studies-subscriptions-service
            port:
              number: 3005
